Add support for automatic price generation for merchants
Introduced a new setting to enable price generation for merchant items. Updated `createItem` hook to account for merchant-specific logic while ensuring compatibility with enabled packs. Also included localization updates for both English and Russian languages.

--- a/languages/ru.json
+++ b/languages/ru.json
@@ -5,5 +5,7 @@
     "EIP.itemPricePacksLabel": "Выбрать библиотеки",
     "EIP.itemPricePacksHint": "Какие библиотеки использовать",
     "EIP.priceGenMethodName": "Способ генерации цены",
-    "EIP.priceGenMethodHint": "Каким способом генерировать цены. DMG - Dungeon Master Guide, XGE - Xanathar's Guide to Everything"
+    "EIP.priceGenMethodHint": "Каким способом генерировать цены. DMG - Dungeon Master Guide, XGE - Xanathar's Guide to Everything",
+    "EIP.enableForIPMerchantName": "Генерировать для торговцев",
+    "EIP.enableForIPMerchantHint": "При добавлении предмета торговцу ему будет генерироваться цена"
 }
